Bug 690561 - Driver 'imagen' fails
Summary: Driver 'imagen' fails
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Printer Driver (show other bugs)
Version: 8.64
Hardware: PC Linux
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-23 06:21 UTC by Dr. Werner Fink
Modified: 2010-08-08 16:49 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
ghostscript-8.60-alignment.dif (2.06 KB, patch)
2009-06-23 06:27 UTC, Dr. Werner Fink
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dr. Werner Fink 2009-06-23 06:21:02 UTC
gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=imagen -r150x150 
'-sOutputFile=/dev/null' //usr/share/ghostscript/8.15/examples/colorcir.ps 
*** glibc detected *** double free or corruption (!prev): 0x088fc4f8 *** 
Abort
Comment 1 Dr. Werner Fink 2009-06-23 06:27:15 UTC
Created attachment 5145 [details]
ghostscript-8.60-alignment.dif

Currently I use the patch above to fix this problem.
Comment 2 Ray Johnston 2009-06-25 10:09:07 UTC
assign for patch review.
Comment 3 Hin-Tak Leung 2010-05-02 03:12:32 UTC
Grabbing a Ralph's bugs.
Comment 4 Hin-Tak Leung 2010-08-02 00:00:43 UTC
The fedora 13-shipped binary does not show this problem; and out of about 15 of snapshot of various age, all except two shows: "free(): invalid pointer: ...."
Comment 5 Hin-Tak Leung 2010-08-02 00:32:08 UTC
Re-assigning bugs which still have work to do.
Comment 6 Till Kamppeter 2010-08-02 06:43:24 UTC
I could not reproduce the bug on my system, but with the patch applied the driver also works for me. So to make sure the driver works for everyone I have applied the patch now.

It also affects only the base/gdevimgn.c file and so cannot break anything else.

Fixed in revision 11585.
Comment 7 Till Kamppeter 2010-08-08 16:49:55 UTC
Probably bug #689505 is the same.