Applied patch to fix "imagen" output device (bug 690561).

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11585 a1074d23-0009-0410-80fe-cf8c14f379e6